added qyery schema for listing
